Banner alignment fixed

--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -2,11 +2,5 @@
   .banner {
     background: url('/assets/img/gallery/gallery-banner-ready-to-feel-beautiful@2x.jpg');
     background-size: cover;
-
-    div {
-      div {
-        margin: 20px 0;
-      }
-    }
   }
 }
